# claude_cowork_workspace

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README-ADW-GUIDE.md  README.md  ROADMAP.md  ROTINAS.md  pyproject.toml  scheduler.py  telegram_server.py  tunnel-guide.md
01 Daily Logs/: [C] 2026-04-06.md  [C] 2026-04-07-dashboard.html  [C] 2026-04-07-email-triage.html  [C] 2026-04-07-morning.html  [C] 2026-04-07-morning.md  [C] 2026-04-07-todoist-review.md  [C] 2026-04-07.md  [C] 2026-04-08-email-triage.html  [C] 2026-04-08-morning.html  [C] 2026-04-08-todoist-review.md  [C] 2026-W14-trends.md  [C] 2026-W15-trends.html  [C] 2026-W15-trends.md  [C] briefing-2026-04-07.md
02 Projects/: [C] AI Business Framework - Analysis & Roadmap.md
03 Comunidade/: [C] FAQ.md  (+1 more)
dashboard/backend/: .gitignore  alembic.ini  pyproject.toml
dashboard/backend/alembic/: env.py
dashboard/backend/alembic/versions/: a67d5c46c95f_create_all_tables_v2.py  ea2075eb42da_v3_community_report_data.py
dashboard/backend/app/: config.py  main.py
dashboard/backend/app/api/: community.py  routines.py
dashboard/backend/app/collectors/: base.py  community_collector.py  routine_collector.py
dashboard/backend/app/core/: database.py  routine_config.py  routine_config.yaml  runner.py  scheduler.py
dashboard/backend/app/models/: __init__.py  community_snapshot.py  finance_snapshot.py  github_snapshot.py  health_snapshot.py  meeting.py  metric.py  routine_run.py  sprint_snapshot.py
dashboard/backend/app/services/: community_service.py  git_service.py  routine_service.py
(+477 files in other folders)
